Sutter Health/src/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coinsurance__c</fullName>
        <label>Coinsurance</label>
        <summarizedField>Competitor_Plan__c.Coinsurance__c</summarizedField>
        <summaryForeignKey>Competitor_Plan__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Employer_Contribution__c</fullName>
        <label>Employer Contribution</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchased</label>
        <type>Checkbox</type>
    </fields>
    <label>SHP Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SHP Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Coinsurance_Cannot_be_more_than_100</fullName>
        <active>true</active>
        <errorConditionFormula>Coinsurance__c &gt;1</errorConditionFormula>
        <errorMessage>Coinsurance Cannot be more than 100%</errorMessage>
    </validationRules>
</CustomObject>